# smplotlib

./: MANIFEST.in  README.md  demo.py  meta.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: conda-publish.yml
smplotlib/: smplot.mplstyle
src/smplotlib/: __init__.py  demo.py  demo_astro.py  smplot.mplstyle
src/smplotlib/test_data/: test_array.npy
