[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smplotlib"
version = "0.0.2"
authors = [
  { name="Jiaxuan Li", email="jiaxuanl@princeton.edu" },
]
description = "Matplotlib template for SuperMongo style"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AstroJacobLi/smplotlib"
"Bug Tracker" = "https://github.com/AstroJacobLi/smplotlib/issues"

[tool.setuptools]
include-package-data = true